# simple-devenv-py

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
