[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Sogo Kato"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
fastapi = "^0.88.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
